# sdbtool

./: README.md  pyproject.toml
.github/workflows/: auto-tag.yml  python-publish.yml  python-test.yml
sdbtool/: __main__.py  attributes.py  cli.py  gui.py  info.py  sdb2json.py  sdb2xml.py  writeproxy.py
sdbtool/apphelp/: __init__.py  fileattr.py  sdb_reader.py  winapi.py
sdbtool/apphelp/tags/: __init__.py  tags.json  well_known.py
sdbtool/cli/: __init__.py  common.py  sdb2json.py  sdb2xml.py
tests/: game.sdb.xml  shim_db.sdb  shim_db.sdb.xml  test.sdb  test.sdb.xml  test_apphelp.py  test_apphelp_winapi.py  test_attributes.py  test_cli.py  test_fileattr.py  test_gui.py  test_info.py  test_sdb2json.py  test_sdb2xml.py  test_sdb_reader.py  test_xml.py  testdb.sdb.xml
tests/data/: all_tagtypes.sdb  app_x32.sdb  app_x32.sdb.xml  app_x64.sdb  app_x64.sdb.xml  game.sdb  game.sdb.xml  testdb.sdb
tools/: generate_tags.py
