[project]
name = "sdbtool"
version = "0.9.0"
description = "Interact with .sdb (application compatibility shim database) files"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mark Jansen", email = "mark.jansen@reactos.org" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "pefile>=2024.8.26",
]
keywords = ["sdb", "sdbtool", "sdb2xml", "shim", "apphelp", "appcompat", "shimeng"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://pypi.org/project/sdbtool/"
Changelog = "https://github.com/learn-more/sdbtool/releases"
Issues = "https://github.com/learn-more/sdbtool/issues"
CI = "https://github.com/learn-more/sdbtool/actions"
Repository = "https://github.com/learn-more/sdbtool"

[project.scripts]
sdbtool = "sdbtool.cli:sdbtool_command"
sdb2xml = "sdbtool.cli:sdb2xml_command"
sdbinfo = "sdbtool.cli:info_command"

[project.gui-scripts]
sdbgui = "sdbtool.cli:gui_command"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  ".vscode",
  ".python-version",
  "uv.lock",
  "tests"
]

[tool.hatch.build.targets.wheel]
# Ship only the package, including the generated tag tables (tags.json) so name
# resolution works for installed/uvx runs. The offline generator lives in tools/,
# outside the package, so it is never bundled in the wheel.
include = ["sdbtool"]
artifacts = ["sdbtool/apphelp/tags/tags.json"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
# Optional deps for tools/generate_tags.py only (not installed by default, never
# shipped). Speakeasy is the fallback backend for apphelp.dll versions the OS
# refuses to load natively. Use: `uv sync --group gen`.
gen = [
    "speakeasy-emulator>=1.5",
    "setuptools<81",  # speakeasy's pinned unicorn 1.0.2 still imports pkg_resources
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
